--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 #url: "https://gitlab.com/iiioxoiii/"
 #baseurl: "/video-classroom"
 
-url: ""
+url: "https://github.com/iiioxoiii/video-classroom-fp"
 baseurl: ""
 
 
-title: "Video-Classroom" # the name of your site, e.g. ACME Corp.
+title: "Video-Classroom-fp" # the name of your site, e.g. ACME Corp.
 siteimage: "/images/vuemastery.svg" ## Icona de la esquerra del site
 email: "formacioalescola@xtec.cat"
 author: "FormacioProfessional"
