--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,13 @@ baseurl: ""
 
 
 title: "Video-Classroom-fp" # the name of your site, e.g. ACME Corp.
-siteimage: "/images/vuemastery.svg" ## Icona de la esquerra del site
+siteimage: "/video-classroom-fp/images/vuemastery" ## Icona de la esquerra del site
 email: "formacioalescola@xtec.cat"
 author: "FormacioProfessional"
 
 ## Icones que acompanyen els cursos
 ico-llicons: "/images/book.svg"
-ico-temps: "/images/clock.svg"
-ico-grup: "/images/young.svg"
+ico-temps: "/video-classroom-fp/images/clock.svg"
 
 ## Cursos
 collections:
