canviant urls en lessons i logotip

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - pagina: inici 
-  url: /index.html
+  url: https://iiioxoiii.github.io/video-classroom-fp/index.html
 
 - pagina: moodle
   url: https://educaciodigital.cat/ea-llotja/moodle/
 
 - pagina: about
-  url: /about.html
+  url: https://iiioxoiii.github.io/video-classroom-fp/about.html
