--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: "/video-classroom-fp"
 
 
 title: "Video-Classroom-fp" # the name of your site, e.g. ACME Corp.
-siteimage: "images/vuemastery" ## Icona de la esquerra del site
+siteimage: "images/vuemastery.svg" ## Icona de la esquerra del site
 email: "formacioalescola@xtec.cat"
 author: "FormacioProfessional"
 
