Amb correccions de baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 url: "https://github.com/iiioxoiii/"
 #url: ""
-baseurl: "/video-classroom-fp"
+baseurl: "video-classroom-fp"
 
 
 title: "Video-Classroom-fp" # the name of your site, e.g. ACME Corp.
