Amb video a about

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title: "Video-Classroom-fp" # the name of your site, e.g. ACME Corp.
 
 siteimage: "/images/vuemastery.svg" ## Icona de la esquerra del site
 
-email: "formacioalescola@xtec.cat"
-author: "FormacioProfessional"
+email: "iiioxoiii@gmail.com"
+author: "VideoClassroom FP"
 
 ## Cursos
 collections:
