--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ url: "https://github.com/iiioxoiii/"
 #url: ""
 baseurl: "/video-classroom-fp"
 
+url-home: https://iiioxoiii.github.io/video-classroom-fp/
+
 
 title: "Video-Classroom-fp" # the name of your site, e.g. ACME Corp.
 
