Amb link logo i url-home

--- a/_data/cursos.yml
+++ b/_data/cursos.yml
@@ -14,7 +14,7 @@
   llibre: "5 videos"
   rellotge: "17 minuts"
   ratlletes: "Master"
-  descripcio: Primer bloc de bandes del segell de música «El Mamut Traçut». El segell està format per grups essencials
+  descripcio: "Segon bloc de bandes del segell de música «El Mamut Traçut». El segell està format per grups essencials
               de l'escena independent catalana i també per bandes internacionals."
   urlprimerallico: "el-mamut-tracut-2-estruc/"
 
